--- a/src/global.css
+++ b/src/global.css
@@ -81,3 +81,9 @@ table {
     padding-left: 20px;
   }
 }
+
+.box-shadow {
+  box-shadow: 0px -100px 100px 0px rgba(0, 0, 0, 0.5) inset;
+  -webkit-box-shadow: 0px -100px 100px 0px rgba(0, 0, 0, 0.5) inset;
+  -moz-box-shadow: 0px -100px 100px 0px rgba(0, 0, 0, 0.5) inset;
+}
